// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Masonry renders layout renders 1`] = `
<div
  className="Masonry"
  style={
    Object {
      "height": 0,
      "width": "100%",
    }
  }
>
  <div
    className="static"
    data-grid-item={true}
    style={
      Object {
        "WebkitTransform": "translateX(0px) translateY(0px)",
        "left": 0,
        "top": 0,
        "transform": "translateX(0px) translateY(0px)",
        "width": 236,
      }
    }
  >
    <div
      style={
        Object {
          "height": "100px",
          "width": "200px",
        }
      }
    />
  </div>
  <div
    className="static"
    data-grid-item={true}
    style={
      Object {
        "WebkitTransform": "translateX(0px) translateY(0px)",
        "left": 0,
        "top": 0,
        "transform": "translateX(0px) translateY(0px)",
        "width": 236,
      }
    }
  >
    <div
      style={
        Object {
          "height": "100px",
          "width": "200px",
        }
      }
    />
  </div>
</div>
`;

exports[`Masonry renders layout renders 2`] = `
<div
  className="Masonry"
  style={
    Object {
      "height": 0,
      "width": "100%",
    }
  }
>
  <div
    className="static"
    data-grid-item={true}
    style={
      Object {
        "WebkitTransform": "translateX(0px) translateY(0px)",
        "left": 0,
        "top": 0,
        "transform": "translateX(0px) translateY(0px)",
        "width": 236,
      }
    }
  >
    <div
      style={
        Object {
          "height": "100px",
          "width": "200px",
        }
      }
    />
  </div>
  <div
    className="static"
    data-grid-item={true}
    style={
      Object {
        "WebkitTransform": "translateX(0px) translateY(0px)",
        "left": 0,
        "top": 0,
        "transform": "translateX(0px) translateY(0px)",
        "width": 236,
      }
    }
  >
    <div
      style={
        Object {
          "height": "100px",
          "width": "200px",
        }
      }
    />
  </div>
</div>
`;

exports[`Masonry renders layout renders full width 1`] = `
<div
  className="Masonry"
  style={
    Object {
      "height": 0,
      "width": "100%",
    }
  }
>
  <div
    className="static"
    data-grid-item={true}
    style={
      Object {
        "WebkitTransform": "translateX(0px) translateY(0px)",
        "left": 0,
        "top": 0,
        "transform": "translateX(0px) translateY(0px)",
        "width": undefined,
      }
    }
  >
    <div
      style={
        Object {
          "height": "100px",
          "width": "200px",
        }
      }
    />
  </div>
  <div
    className="static"
    data-grid-item={true}
    style={
      Object {
        "WebkitTransform": "translateX(0px) translateY(0px)",
        "left": 0,
        "top": 0,
        "transform": "translateX(0px) translateY(0px)",
        "width": undefined,
      }
    }
  >
    <div
      style={
        Object {
          "height": "100px",
          "width": "200px",
        }
      }
    />
  </div>
</div>
`;
